@@ -1,0 +1,5 @@
+#!/bin/sh
+
+sudo yum install -y \
+    mysql \
+    perl-Text-Diff
